# Enjambre

./: .gitignore  Cargo.toml  README.md
panel/: Cargo.toml
panel/src/: main.rs
shared/: Cargo.toml
shared/examples/: build_video_sequence.rs  validate_json.rs
shared/src/: audio.rs  config.rs  dialog_dirs.rs  ipc.rs  lib.rs  mask.rs  music.rs  panel_ui.rs  playlist.rs  scenes.rs  shapes.rs  ui_theme.rs  video.rs
sim/: Cargo.toml
sim-gpu/: Cargo.toml
sim-gpu/src/: gpu_sim.rs  main.rs  rec.rs  shape.rs
sim-gpu/src/shaders/: color.wgsl  grid.wgsl  params.wgsl  particles.wgsl  photo.wgsl  post.wgsl  sim.wgsl
sim/src/: audio.rs  grid.rs  main.rs  music.rs  render.rs  simulation.rs
src/: config.rs  main.rs  render.rs  simulation.rs
