[workspace]
resolver = "2"
members = ["shared", "sim", "panel"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[dependencies]
macroquad = "0.4"
egui-macroquad = "0.17"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
