[package]
name = "shared"
version.workspace = true
edition.workspace = true

[dependencies]
egui.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
# Miniatura de la imagen de forma activa en el panel (ver panel_ui.rs).
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "bmp", "gif"] }
