[package]
name = "shared"
version.workspace = true
edition.workspace = true

[dependencies]
egui.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
# Miniatura de la imagen de forma activa en el panel (ver panel_ui.rs).
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "bmp", "gif"] }
# FFT pura-Rust para el análisis de la música (flujo espectral / beats / bandas)
# y para las bandas de la captura en vivo (audio.rs). Sin enlaces nativos: no
# repite el conflicto ALSA que veta a cpal.
realfft = "3"
# Diálogos nativos de archivo/carpeta (mismo uso que sim/sim-gpu/panel): vive
# aquí solo para centralizar el "recordar última carpeta" (dialog_dirs.rs).
rfd = "0.15"
